HELLODATA-2991 - fix for cloudbeaver websockets